# test-environment

./: .gitignore  README.md
Scripts/: Executionloop.sh  discovery_cluster.sh  kill.sh  logs.sh  prepare_env.sh  start_apps.sh
Scripts/APPLICATIONS/MPI/stencyl/: CMakeCache.txt  CMakeLists.txt  Makefile  autoRemoveDeploy.sh  cmake_install.cmake  demo_start.sh  remove.sh  stencyl  stencyl.c  stencyl.c_old
Scripts/APPLICATIONS/MQ/: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  SAQNAgent.c  autoRemoveDeploy.sh  cmake_install.cmake  demo_start.sh  jzmq-install.sh  message_queue  message_queue.c  message_queue.h  message_queue_dynamic  message_queue_dynamic.c  message_queue_static  message_queue_static.c  remove.sh
Scripts/APPLICATIONS/MQ/SAQN_models_general/thpt_avg_min_mem/: SAQNAgent.c  SAQNAgent.h  SAQNAgent.pyx
Scripts/APPLICATIONS/MQ/SAQN_models_general/thpt_avg_only/: SAQNAgent.c  SAQNAgent.pyx
Scripts/APPLICATIONS/MQ/SAQN_models_general/thpt_var_only/: SAQNAgent.c  SAQNAgent.pyx
Scripts/APPLICATIONS/MQ/cmake/: FindLIBM.cmake
Scripts/APPLICATIONS/MQ/jzmq-master/jzmq-jni/src/main/c++/: config.hpp.in
Scripts/APPLICATIONS/SPARK/: clean_folder.sh  cmd_test.spark  compile.sh  demo_start.sh  javaZMQException  pom.xml
Scripts/APPLICATIONS/SPARK/src/main/java/: AIntGlobalSUMServer.java  COMDHistogram.java  COMDMean.java  CoMDServer.java  GlobalHistogramServer.java  GlobalSUMServer.java  HistogramServer.java  IntGlobalSUMServer.java  MSDComdFinal.java  OpitGlobalHistogramServer.java  SUMServer.java  StatelessSUMServer.java  UnreliableStatelessSUMServer.java
Scripts/APPLICATIONS/SPARK/src/main/java/org/yggdrasil/: NetworkUtils.java  NodeReservationDetail.java  YggdrasilConnector.java
Scripts/APPLICATIONS/SPARK/src/main/java/org/yggdrasil/messages/: AbstractYggdrasilMessage.java  JSONMessage.java  YggdrasilApplicationMessage.java  YggdrasilCTRLMessage.java  YggdrasilReceivedMessage.java
Scripts/APPLICATIONS/SPARK/src/main/java/org/yggdrasil/receivers/: AIntUnpacker.java  AbastractReceiver.java  ByteArrayUnpacker.java  CoMDReceiver.java  IntUnpacker.java  SparkClusterMPIAInrReceiver.java  SparkClusterMPIByteArrayReceiver.java  SparkClusterMPIByteArrayUnreliableReceiver.java  SparkClusterMPIInrReceiver.java
Scripts/APPLICATIONS/SPARK/src/main/java/org/yggdrasil/server/: WorkerState.java  YggdrasilCommandListener.java
Scripts/APPLICATIONS/SPARK/src/main/java/spark/: AbstractClusterServer.java  AbstractClusterServer.java_old  DataStasher.java  ResultSender.java
Scripts/APPLICATIONS/SPARK/src/main/java/utils/: ByteArrayUtils.java  CSVUtils.java
Scripts/APPLICATIONS/SPARK/src/test/java/org/yggdrasil/: PackingTest.java
Scripts/CONFIG/: conf.DATA
Scripts/FUNCTIONS/: monitoring.sh  netAdjust.sh
Scripts/NODEFILES/: mpinodes  mqnodes  nodefile  nodefile1  sparknodes
Scripts/SparkInstall/: clusterSpark.sh
Scripts/SparkInstall/Conf_Files/: core-site.xml  hdfs-site.xml
Scripts/SparkInstall/Conf_Files/had/: core-site.xml  hadoop-env.sh  hdfs-site.xml  workers
Scripts/SparkInstall/Conf_Files/sp/: spark-defaults.conf  spark-env.sh
Scripts/TODO/ongoing/: experiments_sheet.csv  start_apps.sh
